mv base components to vueui

--- a/jumpscale/packages/admin/frontend/index.html
+++ b/jumpscale/packages/admin/frontend/index.html
@@ -1,22 +1,25 @@
 <html lang="en">
-  <head>
+
+<head>
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/codemirror.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/addon/scroll/simplescrollbars.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet"></link>
     <title>3Bot Admin</title>
-    <link rel="icon" type="image/png" href="assets/3bot.png"/>
+    <link rel="icon" type="image/png" href="assets/3bot.png" />
 
     <style>
         .v-data-table-header th {
             white-space: nowrap;
         }
     </style>
-  </head>
+</head>
 
-  <body>
-    <div id="app"><App></App></div>
+<body>
+    <div id="app">
+        <App></App>
+    </div>
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/vuex"></script>
     <script src="https://unpkg.com/vuetify"></script>
@@ -37,5 +40,6 @@
     <script src="index.js"></script>
     <script src="./mixins/base.js"></script>
     <script src="./mixins/dialog.js"></script>
-  </body>
+</body>
+
 </html>
