--- a/jumpscale/packages/vdc_dashboard/frontend/index.html
+++ b/jumpscale/packages/vdc_dashboard/frontend/index.html
@@ -27,8 +27,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/mode/python/python.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/addon/scroll/simplescrollbars.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/mode/python/python.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.js"></script>
   <script src="https://unpkg.com/vue-json-tree@0.4.1/dist/json-tree.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
 
   <script src="data.js"></script>
   <script src="api.js"></script>
