Use fixed vuetify version

--- a/jumpscale/packages/chatflows/frontend/index.html
+++ b/jumpscale/packages/chatflows/frontend/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.3/dist/vuetify.min.css" rel="stylesheet">
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css' rel='stylesheet' />
     <link href="/chatflows/static/style.css" rel="stylesheet">
   </head>
