--- a/jumpscale/packages/vdc_dashboard/frontend/index.html
+++ b/jumpscale/packages/vdc_dashboard/frontend/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.3/dist/vuetify.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/codemirror.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/addon/scroll/simplescrollbars.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
