--- a/jumpscale/packages/farmmanagement/frontend/index.html
+++ b/jumpscale/packages/farmmanagement/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>3Bot</title>
-<link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/vuetify@2.3/dist/vuetify.min.css" rel="stylesheet">
 <link type = "text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" rel="stylesheet">
 <script type="module" src="./index.js"></script>
 <script src="https://www.gstatic.com/charts/loader.js"></script>
