Use different chatUID for chats with query params

--- a/jumpscale/packages/chatflows/frontend/index.html
+++ b/jumpscale/packages/chatflows/frontend/index.html
@@ -18,6 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js'></script>
+    <script src="https://www.unpkg.com/md5@2.3.0/dist/md5.min.js"></script>
     <script type="text/javascript">
 
       Vue.use(Vuex)
