stick to vue 2 which supported for admin dashboard and packages

--- a/jumpscale/packages/chatflows/frontend/index.html
+++ b/jumpscale/packages/chatflows/frontend/index.html
@@ -1,121 +1,125 @@
 <html lang="en">
-  <head>
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.3/dist/vuetify.min.css" rel="stylesheet">
-    <link href='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css' rel='stylesheet' />
-    <link href="/chatflows/static/style.css" rel="stylesheet">
-  </head>
 
-  <body>
-    <div id="app"><router-view></router-view></div>
-    <script src="/chatflows/static/mixins/field.js"></script>
-    <script src="https://unpkg.com/vue"></script>
-    <script src="https://unpkg.com/vuex"></script>
-    <script src="https://unpkg.com/vuetify@2.3"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
-    <script src="https://unpkg.com/http-vue-loader"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.js"></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js'></script>
-    <script src="https://www.unpkg.com/md5@2.3.0/dist/md5.min.js"></script>
-    <script type="text/javascript">
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.3/dist/vuetify.min.css" rel="stylesheet">
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css' rel='stylesheet' />
+  <link href="/chatflows/static/style.css" rel="stylesheet">
+</head>
 
-      Vue.use(Vuex)
-      Vue.use(Vuetify)
+<body>
+  <div id="app">
+    <router-view></router-view>
+  </div>
+  <script src="/chatflows/static/mixins/field.js"></script>
+  <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue-router@3.5.3/dist/vue-router.js"></script>
+  <script src="https://unpkg.com/vuex"></script>
+  <script src="https://unpkg.com/vuetify@2.3"></script>
+  <script src="https://unpkg.com/http-vue-loader"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.js"></script>
+  <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js'></script>
+  <script src="https://www.unpkg.com/md5@2.3.0/dist/md5.min.js"></script>
+  <script type="text/javascript">
 
-      const baseUrl = '/chatflows/static/'
-      const PACKAGE = '{{ package }}'
-      const CHAT = '{{ chat }}'
-      const QS = '{{ qs }}'
-      const USERNAME = '{{ username }}'
-      const EMAIL = '{{ email }}'
-      const CLIENT_IP = '{{ client_ip }}'
-      const NOHEADER = '{{ noheader }}'
+    Vue.use(Vuex)
+    Vue.use(Vuetify)
 
-      httpVueLoader.register(Vue, `${baseUrl}/components/Message.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/String.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/Number.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/Secret.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/TextArea.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/DateTime.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/SingleChoice.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/MultipleChoices.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/DropDown.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/MultipleListChoices.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/UploadFile.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/DownloadFile.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/QRCode.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/Markdown.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/Form.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/Loading.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/InfiniteLoading.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/Confirm.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/TimeDelta.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/Location.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/Error.vue`)
-      httpVueLoader.register(Vue, `${baseUrl}/components/MultiValues.vue`)
+    const baseUrl = '/chatflows/static/'
+    const PACKAGE = '{{ package }}'
+    const CHAT = '{{ chat }}'
+    const QS = '{{ qs }}'
+    const USERNAME = '{{ username }}'
+    const EMAIL = '{{ email }}'
+    const CLIENT_IP = '{{ client_ip }}'
+    const NOHEADER = '{{ noheader }}'
 
-      Vue.mixin({
-        data: function() {
-          return {
-            categories: {
-              string_ask: 'String',
-              int_ask: 'Number',
-              secret_ask: 'Secret',
-              text_ask: 'TextArea',
-              single_choice: 'SingleChoice',
-              multi_choice: 'MultipleChoices',
-              multi_list_choice: 'MultipleListChoices',
-              drop_down_choice: 'DropDown',
-              datetime_picker: 'DateTime',
-              time_delta: 'TimeDelta',
-              location_ask: 'Location',
-              upload_file: 'UploadFile',
-              download_file: 'DownloadFile',
-              qrcode_show: 'QRCode',
-              md_show: 'Markdown',
-              confirm: 'Confirm',
-              loading: 'Loading',
-              infinite_loading: 'InfiniteLoading',
-              ask_multi_values: 'MultiValues',
-              form: 'Form',
-              error: 'Error'
-            }
+    httpVueLoader.register(Vue, `${baseUrl}/components/Message.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/String.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/Number.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/Secret.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/TextArea.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/DateTime.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/SingleChoice.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/MultipleChoices.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/DropDown.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/MultipleListChoices.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/UploadFile.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/DownloadFile.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/QRCode.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/Markdown.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/Form.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/Loading.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/InfiniteLoading.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/Confirm.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/TimeDelta.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/Location.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/Error.vue`)
+    httpVueLoader.register(Vue, `${baseUrl}/components/MultiValues.vue`)
+
+    Vue.mixin({
+      data: function () {
+        return {
+          categories: {
+            string_ask: 'String',
+            int_ask: 'Number',
+            secret_ask: 'Secret',
+            text_ask: 'TextArea',
+            single_choice: 'SingleChoice',
+            multi_choice: 'MultipleChoices',
+            multi_list_choice: 'MultipleListChoices',
+            drop_down_choice: 'DropDown',
+            datetime_picker: 'DateTime',
+            time_delta: 'TimeDelta',
+            location_ask: 'Location',
+            upload_file: 'UploadFile',
+            download_file: 'DownloadFile',
+            qrcode_show: 'QRCode',
+            md_show: 'Markdown',
+            confirm: 'Confirm',
+            loading: 'Loading',
+            infinite_loading: 'InfiniteLoading',
+            ask_multi_values: 'MultiValues',
+            form: 'Form',
+            error: 'Error'
           }
         }
-      })
+      }
+    })
 
-      const vuetify =  new Vuetify({
-        icons: {
-          iconfont: 'mdi'
-        },
-        theme: {
-          themes: {
-            light: {
-              primary: '#1B4F72',
-              secondary: '#F39C12',
-              accent: '#F4F6F7',
-              error: '#EC7063',
-            },
+    const vuetify = new Vuetify({
+      icons: {
+        iconfont: 'mdi'
+      },
+      theme: {
+        themes: {
+          light: {
+            primary: '#1B4F72',
+            secondary: '#F39C12',
+            accent: '#F4F6F7',
+            error: '#EC7063',
           },
-        }
-      })
-
-      const app = httpVueLoader('/chatflows/static/App.vue')
-      const router = new VueRouter({
-        routes: [
-          { path: '/', component: app},
-        ]
-      })
-      new Vue({
-        el: '#app',
-        components: {
-          App: app,
         },
-        router,
-        vuetify
-      })
-    </script>
-  </body>
+      }
+    })
+
+    const app = httpVueLoader('/chatflows/static/App.vue')
+    const router = new VueRouter({
+      routes: [
+        { path: '/', component: app },
+      ]
+    })
+    new Vue({
+      el: '#app',
+      components: {
+        App: app,
+      },
+      router,
+      vuetify
+    })
+  </script>
+</body>
+
 </html>
