--- a/jumpscale/packages/admin/frontend/index.html
+++ b/jumpscale/packages/admin/frontend/index.html
@@ -1,42 +1,48 @@
 <html lang="en">
-  <head>
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.3/dist/vuetify.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/codemirror.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/addon/scroll/simplescrollbars.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet"></link>
-    <title>3Bot Admin</title>
-    <link rel="icon" type="image/png" href="assets/3bot.png"/>
 
-    <style>
-        .v-data-table-header th {
-            white-space: nowrap;
-        }
-    </style>
-  </head>
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.3/dist/vuetify.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/codemirror.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/addon/scroll/simplescrollbars.css"
+    rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+  </link>
+  <title>3Bot Admin</title>
+  <link rel="icon" type="image/png" href="assets/3bot.png" />
 
-  <body>
-    <div id="app"><App></App></div>
-    <script src="https://unpkg.com/vue"></script>
-    <script src="https://unpkg.com/vuex"></script>
-    <script src="https://unpkg.com/vuetify@2.3"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
-    <script src="https://unpkg.com/http-vue-loader"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-codemirror@4.0.6/dist/vue-codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/mode/python/python.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/addon/scroll/simplescrollbars.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/mode/python/python.min.js"></script>
-    <script src="https://unpkg.com/vue-json-tree@0.4.1/dist/json-tree.js"></script>
-    <script src="https://unpkg.com/vue-cookies@1.5.12/vue-cookies.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <style>
+    .v-data-table-header th {
+      white-space: nowrap;
+    }
+  </style>
+</head>
 
-    <script src="api.js"></script>
-    <script src="data.js"></script>
-    <script src="index.js"></script>
-    <script src="./mixins/base.js"></script>
-    <script src="./mixins/dialog.js"></script>
-  </body>
+<body>
+  <div id="app">
+    <App></App>
+  </div>
+  <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue-router@3.5.3/dist/vue-router.js"></script>
+  <script src="https://unpkg.com/vuex"></script>
+  <script src="https://unpkg.com/vuetify@2.3"></script>
+  <script src="https://unpkg.com/http-vue-loader"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/codemirror.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue-codemirror@4.0.6/dist/vue-codemirror.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/mode/python/python.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/addon/scroll/simplescrollbars.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/mode/python/python.min.js"></script>
+  <script src="https://unpkg.com/vue-json-tree@0.4.1/dist/json-tree.js"></script>
+  <script src="https://unpkg.com/vue-cookies@1.5.12/vue-cookies.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+  <script src="api.js"></script>
+  <script src="data.js"></script>
+  <script src="index.js"></script>
+  <script src="./mixins/base.js"></script>
+  <script src="./mixins/dialog.js"></script>
+</body>
+
 </html>
