--- a/jumpscale/packages/threebot_deployer/frontend/index.html
+++ b/jumpscale/packages/threebot_deployer/frontend/index.html
@@ -16,10 +16,10 @@
   <div id="app">
     <App></App>
   </div>
-  <script src="https://unpkg.com/vue"></script>
+  <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue-router@3.5.3/dist/vue-router.js"></script>
   <script src="https://unpkg.com/vuex"></script>
   <script src="https://unpkg.com/vuetify@2.3"></script>
-  <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <script src="https://unpkg.com/http-vue-loader"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/codemirror.min.js"></script>
