--- a/jumpscale/packages/vdc_dashboard/frontend/index.html
+++ b/jumpscale/packages/vdc_dashboard/frontend/index.html
@@ -4,7 +4,8 @@
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.3/dist/vuetify.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/codemirror.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/addon/scroll/simplescrollbars.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/addon/scroll/simplescrollbars.css"
+        rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     </link>
     <title>VDC Dashboard</title>
@@ -15,10 +16,10 @@
     <div id="app">
         <App></App>
     </div>
-    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router@3.5.3/dist/vue-router.js"></script>
     <script src="https://unpkg.com/vuex"></script>
     <script src="https://unpkg.com/vuetify@2.3"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src="https://unpkg.com/http-vue-loader"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.55.0/codemirror.min.js"></script>
